// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataOverlayDataRow Markdown should render markdown row for overlay panel correctly 1`] = `
<div>
  <div
    data-testid="ReactMarkdownWrapper"
  >
    [{"className":"panel-row","content":"# content"},{}]
  </div>
</div>
`;

exports[`DataOverlayDataRow Markdown should render markdown row for text annotation correctly 1`] = `
<div>
  <div
    data-testid="ReactMarkdownWrapper"
  >
    [{"className":"annotation-row","content":"# content"},{}]
  </div>
</div>
`;
